<resources>
    <string name="app_name">academy-tbc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection_please_try_again">No internet connection. Please try again</string>
    <string name="user_with_this_email_cannot_be_registered">User with this email cannot be registered</string>
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="enter_your_credentials_to_access_your_account">Enter your credentials to access your account</string>
    <string name="john_doe_company_com">john.doe@company.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password_2">Confirm password</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">
    <![CDATA[
        <font color="#737373">I agree to </font>
        <font color="#111111">Terms of Service and Privacy Policy</font>
    ]]>
</string>
    <string name="create_account">Create Account</string>
    <string name="select_department">Select Department</string>
    <string name="enter_your_details_to_gert_started">Enter your details to gert started.</string>
    <string name="first_name">First Name</string>
    <string name="john">John</string>
    <string name="last_name">Last Name</string>
    <string name="doe">Doe</string>
    <string name="_995_000_000_000">+995 (000) 000-000</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="code_expires_in">Code expires in</string>
    <string name="resend_code">Resend Code</string>
    <string name="department">Department</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password">Enter your email and we\'ll send you a link to reset your password.</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="code_expires_in_02d_02d">Code expires in %02d:%02d</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="valid">Valid</string>
    <string name="you_need_to_agree_to_tos">You need to agree to TOS</string>
    <string name="confirm_password_empty">Confirm password empty</string>
    <string name="wrong_otp_format">Wrong OTP format</string>
    <string name="wrong_phone_number_format">Wrong phone number format</string>
    <string name="password_must_be_at_least_8_characters_with_uppercase_lowercase_and_number">Password must be at least 8 characters with uppercase, lowercase, and number.</string>
    <string name="last_name_empty">Last name empty</string>
    <string name="first_name_empty">First name empty</string>
    <string name="department_not_selected">Department not selected</string>
    <string name="validate">Validate</string>
    <string name="password_does_not_match_confirm_password">Password does not match confirm password</string>
    <string name="please_select_a_department">Please select a department</string>
    <string name="view_details">View Details</string>
    <string name="eventhub">EventHub</string>
    <string name="stay_connected_with_upcoming_company_events_and_activities">Stay connected with upcoming company events and activities.</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="browse_by_category">Browse by Category</string>
    <string name="team_building">Team Building</string>
    <string name="sports">Sports</string>
    <string name="workshops">Workshops</string>
    <string name="happy_fridays">Happy Fridays</string>
    <string name="cultural">Cultural</string>
    <string name="wellness">Wellness</string>
    <string name="trending_events">Trending Events</string>
    <string name="popular_events_with_high_registration_rates">Popular events with high registration rates.</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="faq_question_1">What if I need to cancel?</string>
    <string name="faq_answer_1">You can cancel your registration up to 24 hours before the event through this app. This will allow someone from the waitlist to attend.</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="my_events">My Events</string>
    <string name="updates">Updates</string>
    <string name="profile">Profile</string>
    <string name="browse_events">Browse Events</string>
    <string name="search_events">Search events...</string>
    <string name="filters">Filters</string>
    <string name="event_details">Event Details</string>
    <string name="about_this_event">About this Event</string>
    <string name="featured_speakers">Featured Speakers</string>
    <string name="registered">%1$s registered</string>
    <string name="spots_left">%1$s spots left</string>
    <string name="registered_capacity">%1$s registered</string>
    <string name="spots_left_capacity">%1$s spots left</string>
    <string name="registered_spots_left">%1$s registered, %2$s spots left</string>
    <string name="select_date">Select Date</string>
    <string name="my_events2">My Events</string>
    <string name="list">List</string>
    <string name="beginner">Beginner</string>
    <string name="successfully_registered_please_sign_in">Successfully registered! Please Sign In</string>
    <string name="register_now">Register Now</string>
    <string name="already_registered">Registered</string>
    <string name="sign_out">Sign out</string>
    <string name="email_is">Email:</string>
    <string name="department_is">Department:</string>
    <string name="full_name_is">Full name:</string>
</resources>