<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="72dp"
        tools:context=".presentation.screen.sign_in.SignInFragment">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintBottom_toTopOf="@id/tvSubtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Enter your details to gert started."
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignIn" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="40dp"
            android:text="First Name"
            android:textColor="@color/black3"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            style="@style/EditTextOutlined"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="26dp"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="John"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toStartOf="@id/etLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFirstName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Last Name"
            android:textColor="@color/black3"
            android:visibility="visible"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="@id/etLastName"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
            tools:layout_editor_absoluteX="206dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            style="@style/EditTextOutlined"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginEnd="26dp"
            android:inputType="text"
            android:hint="Doe"
            android:visibility="visible"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toBottomOf="@id/etFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etFirstName"
            app:layout_constraintTop_toTopOf="@id/etFirstName" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@color/black3"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFirstName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/EditTextOutlined"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:inputType="text"
            android:hint="@string/john_doe_company_com"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textColor="@color/black3"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPhoneNumber"
            style="@style/EditTextOutlined"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:layout_marginEnd="8dp"
            android:hint="+995 (000) 000-000"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toStartOf="@id/btnSendOtp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendOtp"
            style="@style/ButtonOutlined"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginEnd="26dp"
            android:backgroundTint="@color/secondary"
            android:text="Send OTP"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etPhoneNumber"
            app:layout_constraintTop_toTopOf="@id/etPhoneNumber" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tvOtpTitle,etOtp,tvCodeExpirationTimer,tvResendCode"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOtpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/security"
            android:drawablePadding="8dp"
            android:text="Enter OTP Code"
            android:textColor="@color/black3"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPhoneNumber" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etOtp"
            style="@style/EditTextOutlined"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="26dp"
            android:maxLength="6"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:layout_marginEnd="26dp"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOtpTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCodeExpirationTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:text="Code expires in 00:50"
            android:textColor="@color/gray"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etOtp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvResendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Resend Code"
            android:textColor="@color/black2"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etOtp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="48dp"
            android:text="Department"
            app:layout_goneMarginTop="20dp"
            android:textColor="@color/black3"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etOtp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdownDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:endIconDrawable="@drawable/dropdown"
            app:endIconMode="dropdown_menu"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDepartment">

            <AutoCompleteTextView
                android:id="@+id/spinnerDepartment"
                style="@style/EditTextOutlined"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:hint="@string/select_department"
                android:textColorHint="@color/black2"
                android:inputType="none"
                android:textColor="@color/black3"
                app:fontFamily="@font/roboto_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="@color/black3"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dropdownDepartment" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/EditTextOutlined"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:inputType="text"
            android:hint="@string/create_password"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            style="@style/EditTextOutlined"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:hint="@string/confirm_password_2"
            android:inputType="text"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword" />


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkboxTos"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            app:buttonTint="@color/primary"
            android:checked="false"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAgreeTos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/i_agree_to_the_terms_of_service_and_privacy_policy"
            app:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toBottomOf="@id/checkboxTos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/checkboxTos"
            app:layout_constraintTop_toTopOf="@id/checkboxTos" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateAccount"
            style="@style/ButtonPrimaryFilled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/primary"
            android:text="@string/create_account"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkboxTos" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:text="Already have an account?"
            app:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/tvBtnSignIn"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/btnCreateAccount"
            app:layout_constraintTop_toBottomOf="@id/btnCreateAccount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBtnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:textSize="14sp"
            android:text="Sign In"
            android:textColor="@color/black2"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="@id/btnCreateAccount"
            app:layout_constraintStart_toEndOf="@id/tvHaveAnAccount"
            app:layout_constraintTop_toBottomOf="@id/btnCreateAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

